[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/GUI/Titlescreen/Title.png" type="Texture" id=1]
[ext_resource path="res://Assets/DynamicFonts/FixedSysTemplate.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/DynamicFonts/new_dynamicfontdata.tres" type="DynamicFontData" id=3]
[ext_resource path="res://GameSrc/Universal/Scenes/Bootstrap/GameInit/Manager.gd" type="Script" id=4]
[ext_resource path="res://GameSrc/Universal/Scenes/Bootstrap/Advanced.gd" type="Script" id=5]
[ext_resource path="res://Assets/CustomeStyle/Button/Default/SpanishViolet/Pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/CustomeStyle/Button/Default/CopperRed/Normal.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/CustomeStyle/Button/Default/VegasGold/Pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://Assets/CustomeStyle/Button/Default/CopperRed/Hover.tres" type="StyleBox" id=9]
[ext_resource path="res://Assets/CustomeStyle/Button/Default/VegasGold/Hover.tres" type="StyleBox" id=10]
[ext_resource path="res://Assets/CustomeStyle/Button/Default/SpanishViolet/Hover.tres" type="StyleBox" id=11]
[ext_resource path="res://Assets/temp/BootMenue_Neon_Button.tres" type="StyleBox" id=12]
[ext_resource path="res://Assets/CustomeStyle/Button/Default/VegasGold/Normal.tres" type="StyleBox" id=13]
[ext_resource path="res://Assets/CustomeStyle/Button/Default/SpanishViolet/Normal.tres" type="StyleBox" id=14]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 3
outline_color = Color( 0.172549, 0.203922, 0.286275, 1 )
font_data = ExtResource( 3 )

[node name="Node" type="Node2D"]
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1128.0
margin_bottom = 632.0
custom_styles/panel = ExtResource( 12 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1081.0
margin_bottom = 403.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="PatnicRoom" type="Button" parent="."]
margin_left = 512.0
margin_top = 72.0
margin_right = 742.0
margin_bottom = 112.0
custom_colors/font_color = Color( 0.976471, 1, 0.756863, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0.913725, 0.556863, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.521569, 0.215686, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 13 )
text = "START GAME"

[node name="Alecandria" type="Button" parent="."]
margin_left = 776.0
margin_top = 72.0
margin_right = 1006.0
margin_bottom = 112.0
custom_colors/font_color = Color( 0.976471, 1, 0.756863, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0.913725, 0.556863, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.521569, 0.215686, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 13 )
text = "START CONTENT CREATOR"

[node name="Advanced" type="Button" parent="."]
margin_left = 32.0
margin_top = 184.0
margin_right = 262.0
margin_bottom = 224.0
custom_colors/font_color = Color( 1, 0.866667, 0.858824, 1 )
custom_colors/font_color_hover = Color( 0.866667, 0.623529, 0.533333, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 0.345098, 0.356863, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 7 )
text = "ADVANCED OPTIONS"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionsPanel" type="Control" parent="."]
visible = false
margin_left = 16.0
margin_top = 296.0
margin_right = 240.0
margin_bottom = 496.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Form" type="Control" parent="optionsPanel"]
margin_left = -56.0
margin_top = -304.0
margin_right = -16.0
margin_bottom = -264.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KitsToStart" type="Button" parent="optionsPanel"]
margin_left = 16.0
margin_top = -16.0
margin_right = 216.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.937255, 0.760784, 1, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0.627451, 0.85098, 1 )
custom_colors/font_color_pressed = Color( 0.407843, 0.427451, 0.792157, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 14 )
text = "STARTING KITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BootMode" type="Button" parent="optionsPanel"]
margin_left = 16.0
margin_top = 40.0
margin_right = 216.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.937255, 0.760784, 1, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0.627451, 0.85098, 1 )
custom_colors/font_color_pressed = Color( 0.407843, 0.427451, 0.792157, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 14 )
text = "MODE TO BOOT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommunityContent" type="Button" parent="optionsPanel"]
margin_left = 16.0
margin_top = 96.0
margin_right = 216.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0.937255, 0.760784, 1, 1 )
custom_colors/font_color_hover = Color( 0.686275, 0.627451, 0.85098, 1 )
custom_colors/font_color_pressed = Color( 0.407843, 0.427451, 0.792157, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 14 )
text = "USER CONTENT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Event" type="Button" parent="optionsPanel"]
visible = false
margin_left = 16.0
margin_top = 152.0
margin_right = 208.0
margin_bottom = 192.0
text = "WIP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventInfo" type="RichTextLabel" parent="."]
margin_left = 584.0
margin_top = 328.0
margin_right = 992.0
margin_bottom = 488.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "EVENT: 
player-generatet content
(theme)
On 01.06.21"
text = "EVENT: 
player-generatet content
(theme)
On 01.06.21"

[connection signal="pressed" from="PatnicRoom" to="." method="_on_default_pressed"]
[connection signal="pressed" from="Alecandria" to="." method="_on_DioJSONes_pressed"]
[connection signal="pressed" from="Advanced" to="Advanced" method="_on_pressed"]
[connection signal="pressed" from="optionsPanel/KitsToStart" to="." method="_on_kitsToStart_pressed"]
[connection signal="pressed" from="optionsPanel/BootMode" to="." method="_on_bootMode_pressed"]
[connection signal="pressed" from="optionsPanel/CommunityContent" to="." method="_on_communityContent_pressed"]
[connection signal="pressed" from="optionsPanel/Event" to="." method="_on_Event_pressed"]
